client profile tab issue on mobile

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -1584,7 +1584,7 @@ a.edit-workout-link {
   //margin-bottom: 30px;
   margin-bottom: -71px;
   background: $navbarblue;
-  overflow: auto;
+  //overflow: auto;
   text-decoration: none;
   text-align: center;
   .tab {
